--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 		.wrapper {
 			display:flex;
 			justify-content:center;
-			height: 450px;
+			align-items:center;
+			align-content:center;
+			height: 100%;
 		}
 		.picture{
 			background-image: url(product-preview-card-component-main/images/image-product-desktop.jpg);
